--- a/action.yml
+++ b/action.yml
@@ -56,9 +56,9 @@ inputs:
     default: false
     required: false
   trigger:
-    description: 'Trigger of the capturing the build size - defaults to "build". Can be useful if you have differing reasons for capturing the build size across your repository.'
+    description: 'Trigger of the capturing the build size - defaults to the github workflow name. Can be useful if you have differing reasons or jobs for capturing the build size across your repository.'
     required: false
-    default: 'build'
+    default: '${{ github.workflow }}
   user:
     description: 'User who triggered the build - defaults to the github actor property'
     required: false
